--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,147 @@
+:root {
+  --full-width: 100%;
+}
+
 .calculator {
   width: 320px;
   height: 480px;
-  background: #eee;
+  /* background: rgb(32, 32, 32); */
+  background: conic-gradient(
+    from 295deg,
+    rgb(32, 32, 32),
+    rgb(56, 56, 56),
+    rgb(32, 32, 32)
+  );
   border-radius: 5px;
-  box-shadow: 2px 2px 3px rgba(64, 64, 64, 0.2), -2px -2px 3px rgba(0, 0, 0, 0.2);
+  border: 1px solid gray;
+  box-shadow: 2px 2px 3px rgba(64, 64, 64, 0.2),
+    -2px -2px 3px rgba(0, 0, 0, 0.2);
+  padding: 4px;
 }
 
-output {
+.logo-and-autor {
+  width: var(--full-width);
+  height: 10px;
+  /* border: 1px solid white; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 5px;
+  font-size: 0.74em;
+  font-family: Arial;
+}
+
+.icon-name {
+  display: flex;
+  width: 25%;
+  justify-content: space-evenly;
+}
+
+p {
+  font-size: 0.9em;
+}
+
+#display {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  flex-direction: column;
   width: 300px;
-  height: 40px;
-  background: #fff;
-  margin: 10px auto;
+  height: 140px;
+  background: none;
+  margin: 5px auto;
+  padding: 20px 15px;
   border-radius: 5px;
   font-size: 1.4em;
   font-weight: bold;
-  box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.3),
-    inset -1px -1px 1px rgba(0, 0, 0, 0.3);
+  word-wrap: break-word;
+  /* box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2),
+    inset -1px -1px 1px rgba(0, 0, 0, 0.2); */
 }
 
-.keyboard {
-  height: 440px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
+.input {
+  font-size: 1em;
+  word-wrap: break-word;
+  width: 260px;
+  height: auto;
+  text-align: end;
 }
- 
+
+.result {
+  font-size: 1.2em;
+  color: #888;
+  width: 260px;
+  height: auto;
+  text-align: end;
+}
+
 button {
-  margin: 0.5em 1em;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: none;
-  border: none;
+  /* margin: 0.5em 1em; */
+  width: var(--full-width);
+  height: 100%;
+  background-color: rgb(60, 60, 60);
+  /* background: none; */
+  border: 1px solid white;
+  border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
   font-weight: bold;
+  user-select: none;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
 }
+
+.number-block {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 2px;
+  width: var(--full-width);
+  height: 65.6%;
+}
+
+#zero {
+  grid-column: span 2;
+}
+
+#equals {
+  grid-row: span 2;
+  background-color: #10f1f9 !important;
+}
+
+#equals:hover {
+  grid-row: span 2;
+  background-color: #28f7ff !important;
+}
+
+#clear,
+#delete,
+#divide,
+#multiply,
+#subtract,
+#add,
+#equals {
+  background-color: rgb(50, 50, 50);
+}
+
+#clear:hover,
+#delete:hover,
+#divide:hover,
+#multiply:hover,
+#subtract:hover,
+#add:hover,
+#equals:hover {
+  background-color: rgb(
+    60,
+    60,
+    60
+  ); /* Изменено на более темный цвет для hover */
+}
+
+button:hover {
+  background-color: rgb(50, 50, 50);
+}
+
+
