--- a/src/App.css
+++ b/src/App.css
@@ -144,4 +144,58 @@ button:hover {
   background-color: rgb(50, 50, 50);
 }
 
+@media (prefers-color-scheme: dark) {
+  button {
+    background-color: rgb(60, 60, 60);
+    border: 1px solid white;
+  }
 
+  .calculator {
+    background: conic-gradient(
+      from 295deg,
+      rgb(32, 32, 32),
+      rgb(56, 56, 56),
+      rgb(32, 32, 32)
+    );
+    border: 1px solid gray;
+    box-shadow: 2px 2px 3px rgba(64, 64, 64, 0.2),
+      -2px -2px 3px rgba(0, 0, 0, 0.2);
+  }
+
+  #equals {
+    background-color: #10f1f9 !important;
+  }
+  
+  #equals:hover {
+    background-color: #28f7ff !important;
+  }
+  
+  #clear,
+  #delete,
+  #divide,
+  #multiply,
+  #subtract,
+  #add,
+  #equals {
+    background-color: rgb(50, 50, 50);
+  }
+  
+  #clear:hover,
+  #delete:hover,
+  #divide:hover,
+  #multiply:hover,
+  #subtract:hover,
+  #add:hover,
+  #equals:hover {
+    background-color: rgb(
+      60,
+      60,
+      60
+    ); /* Изменено на более темный цвет для hover */
+  }
+  
+  button:hover {
+    background-color: rgb(50, 50, 50);
+  }
+
+}
