--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden
+  overflow: hidden;
+  color: white;
 }
 
 @keyframes gradientAnimation {
@@ -28,10 +29,3 @@ body, html {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background: linear-gradient(45deg, #000000, #404040, #828282, #404040, #000000);
-      background-size: 400% 400%;
-      animation: gradientAnimation 75s infinite;
-  }
-}
