--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,25 @@
 body, html {
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, #000000, #404040, #828282, #404040, #000000);
-      background-size: 400% 400%;
-      animation: gradientAnimation 75s infinite;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   color: white;
+
+
+background: linear-gradient(
+    -45deg,
+    #000000,
+    rgba(138, 43, 226, 0.096),
+    #000000,
+    rgba(137, 43, 226, 0.096)
+  );
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
 }
 
-@keyframes gradientAnimation {
+@keyframes gradient {
   0% {
     background-position: 0% 50%;
   }
@@ -28,4 +36,3 @@ body, html {
     background-position: 0% 50%;
   }
 }
-
